// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PageButton /> Snapshot should match snapshot 1`] = `
<DocumentFragment>
  .PageButton-module__page-button___eu3bX {
  align-items: center;
  background-color: var(--qtm-colors-neutral-0);
  border: 1px solid var(--qtm-colors-neutral-300);
  border-radius: 10px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  cursor: pointer;
  display: flex;
  font-size: var(--qtm-base-font-size);
  font-weight: 700;
  justify-content: center;
  margin: 0 var(--qtm-spacing-xxsmall);
  min-height: 40px;
  min-width: 40px;
  outline: none;
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-xsmall);
  text-decoration: none;
  transition: background-color .2s ease-in-out,border-color .2s ease-in-out,color .2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}

<a
    class="PageButton-module__page-button___eu3bX"
  >
    50
  </a>
</DocumentFragment>
`;

exports[`<PageButton /> Snapshot should match snapshot with active prop 1`] = `
<DocumentFragment>
  .PageButton-module__page-button___eu3bX {
  align-items: center;
  background-color: var(--qtm-colors-neutral-0);
  border: 1px solid var(--qtm-colors-neutral-300);
  border-radius: 10px;
  box-sizing: border-box;
  color: var(--qtm-colors-neutral-700);
  cursor: pointer;
  display: flex;
  font-size: var(--qtm-base-font-size);
  font-weight: 700;
  justify-content: center;
  margin: 0 var(--qtm-spacing-xxsmall);
  min-height: 40px;
  min-width: 40px;
  outline: none;
  padding: var(--qtm-spacing-xxsmall) var(--qtm-spacing-xsmall);
  text-decoration: none;
  transition: background-color .2s ease-in-out,border-color .2s ease-in-out,color .2s ease-in-out;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}

.PageButton-module__page-button-active___8ARg2 {
  background-color: var(--qtm-colors-primary-700);
  border: 1px solid var(--qtm-colors-primary-700);
  color: var(--qtm-colors-neutral-0);
}

<a
    class="PageButton-module__page-button___eu3bX PageButton-module__page-button-active___8ARg2"
  >
    10
  </a>
</DocumentFragment>
`;
